// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildLogsExtractionEsqlQuery generates the expected query for generic entity description 1`] = `
"FROM test-index-*
    METADATA _index
  | WHERE ((entity.id IS NOT NULL AND entity.id != \\"\\"))
      AND @timestamp > TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
  | SORT @timestamp ASC
  | LIMIT 10000
  | EVAL recent.entity.EngineMetadata.UntypedId = entity.id
  | STATS
    recent.timestamp = MAX(@timestamp),
    recent.entity.name = LAST(TO_STRING(entity.name), @timestamp),
 recent.entity.source = LAST(TO_STRING(entity.source), @timestamp),
 recent.entity.type = LAST(TO_STRING(entity.type), @timestamp),
 recent.entity.sub_type = LAST(TO_STRING(entity.sub_type), @timestamp),
 recent.entity.url = LAST(TO_STRING(entity.url), @timestamp),
 recent.entity.attributes.Privileged = LAST(TO_BOOLEAN(entity.attributes.Privileged), @timestamp),
 recent.entity.attributes.Asset = LAST(TO_BOOLEAN(entity.attributes.Asset), @timestamp),
 recent.entity.attributes.Managed = LAST(TO_BOOLEAN(entity.attributes.Managed), @timestamp),
 recent.entity.attributes.Mfa_enabled = LAST(TO_BOOLEAN(entity.attributes.Mfa_enabled), @timestamp),
 recent.entity.lifecycle.First_seen = LAST(TO_DATETIME(entity.lifecycle.First_seen), @timestamp),
 recent.entity.lifecycle.Last_activity = LAST(TO_DATETIME(entity.lifecycle.Last_activity), @timestamp),
 recent.entity.behaviors.Brute_force_victim = LAST(TO_BOOLEAN(entity.behaviors.Brute_force_victim), @timestamp),
 recent.entity.behaviors.New_country_login = LAST(TO_BOOLEAN(entity.behaviors.New_country_login), @timestamp),
 recent.entity.behaviors.Used_usb_device = LAST(TO_BOOLEAN(entity.behaviors.Used_usb_device), @timestamp),
 recent.entity.risk.calculated_level = LAST(TO_STRING(entity.risk.calculated_level), @timestamp),
 recent.entity.risk.calculated_score = LAST(entity.risk.calculated_score, @timestamp),
 recent.entity.risk.calculated_score_norm = LAST(entity.risk.calculated_score_norm, @timestamp),
 recent.cloud.account.id = LAST(TO_STRING(cloud.account.id), @timestamp),
 recent.cloud.account.name = LAST(TO_STRING(cloud.account.name), @timestamp),
 recent.cloud.availability_zone = LAST(TO_STRING(cloud.availability_zone), @timestamp),
 recent.cloud.instance.id = LAST(TO_STRING(cloud.instance.id), @timestamp),
 recent.cloud.instance.name = LAST(TO_STRING(cloud.instance.name), @timestamp),
 recent.cloud.machine.type = LAST(TO_STRING(cloud.machine.type), @timestamp),
 recent.cloud.project.id = LAST(TO_STRING(cloud.project.id), @timestamp),
 recent.cloud.project.name = LAST(TO_STRING(cloud.project.name), @timestamp),
 recent.cloud.provider = LAST(TO_STRING(cloud.provider), @timestamp),
 recent.cloud.region = LAST(TO_STRING(cloud.region), @timestamp),
 recent.cloud.service.name = LAST(TO_STRING(cloud.service.name), @timestamp),
 recent.host.architecture = LAST(TO_STRING(host.architecture), @timestamp),
 recent.host.boot.id = LAST(TO_STRING(host.boot.id), @timestamp),
 recent.host.cpu.usage = LAST(host.cpu.usage, @timestamp),
 recent.host.disk.read.bytes = LAST(TO_LONG(host.disk.read.bytes), @timestamp),
 recent.host.disk.write.bytes = LAST(TO_LONG(host.disk.write.bytes), @timestamp),
 recent.host.domain = LAST(TO_STRING(host.domain), @timestamp),
 recent.host.hostname = LAST(TO_STRING(host.hostname), @timestamp),
 recent.host.id = LAST(TO_STRING(host.id), @timestamp),
 recent.host.mac = LAST(TO_STRING(host.mac), @timestamp),
 recent.host.name = LAST(TO_STRING(host.name), @timestamp),
 recent.host.network.egress.bytes = LAST(TO_LONG(host.network.egress.bytes), @timestamp),
 recent.host.network.egress.packets = LAST(TO_LONG(host.network.egress.packets), @timestamp),
 recent.host.network.ingress.bytes = LAST(TO_LONG(host.network.ingress.bytes), @timestamp),
 recent.host.network.ingress.packets = LAST(TO_LONG(host.network.ingress.packets), @timestamp),
 recent.host.pid_ns_ino = LAST(TO_STRING(host.pid_ns_ino), @timestamp),
 recent.host.type = LAST(TO_STRING(host.type), @timestamp),
 recent.host.uptime = LAST(TO_LONG(host.uptime), @timestamp),
 recent.host.ip = LAST(TO_IP(host.ip), @timestamp),
 recent.user.domain = LAST(TO_STRING(user.domain), @timestamp),
 recent.user.email = LAST(TO_STRING(user.email), @timestamp),
 recent.user.roles = LAST(TO_STRING(user.roles), @timestamp),
 recent.user.hash = LAST(TO_STRING(user.hash), @timestamp),
 recent.user.id = LAST(TO_STRING(user.id), @timestamp),
 recent.user.name = LAST(TO_STRING(user.name), @timestamp),
 recent.user.full_name = LAST(TO_STRING(user.full_name), @timestamp),
 recent.orchestrator.api_version = LAST(TO_STRING(orchestrator.api_version), @timestamp),
 recent.orchestrator.cluster.id = LAST(TO_STRING(orchestrator.cluster.id), @timestamp),
 recent.orchestrator.cluster.name = LAST(TO_STRING(orchestrator.cluster.name), @timestamp),
 recent.orchestrator.cluster.url = LAST(TO_STRING(orchestrator.cluster.url), @timestamp),
 recent.orchestrator.cluster.version = LAST(TO_STRING(orchestrator.cluster.version), @timestamp),
 recent.orchestrator.namespace = LAST(TO_STRING(orchestrator.namespace), @timestamp),
 recent.orchestrator.organization = LAST(TO_STRING(orchestrator.organization), @timestamp),
 recent.orchestrator.resource.annotation = LAST(TO_STRING(orchestrator.resource.annotation), @timestamp),
 recent.orchestrator.resource.id = LAST(TO_STRING(orchestrator.resource.id), @timestamp),
 recent.orchestrator.resource.ip = LAST(TO_STRING(orchestrator.resource.ip), @timestamp),
 recent.orchestrator.resource.label = LAST(TO_STRING(orchestrator.resource.label), @timestamp),
 recent.orchestrator.resource.name = LAST(TO_STRING(orchestrator.resource.name), @timestamp),
 recent.orchestrator.resource.parent.type = LAST(TO_STRING(orchestrator.resource.parent.type), @timestamp),
 recent.orchestrator.resource.type = LAST(TO_STRING(orchestrator.resource.type), @timestamp),
 recent.orchestrator.type = LAST(TO_STRING(orchestrator.type), @timestamp),
 recent.entity.source = FIRST(TO_STRING(_index), @timestamp),
 recent.asset.id = LAST(TO_STRING(asset.id), @timestamp),
 recent.asset.name = LAST(TO_STRING(asset.name), @timestamp),
 recent.asset.owner = LAST(TO_STRING(asset.owner), @timestamp),
 recent.asset.serial_number = LAST(TO_STRING(asset.serial_number), @timestamp),
 recent.asset.model = LAST(TO_STRING(asset.model), @timestamp),
 recent.asset.vendor = LAST(TO_STRING(asset.vendor), @timestamp),
 recent.asset.environment = LAST(TO_STRING(asset.environment), @timestamp),
 recent.asset.criticality = LAST(TO_STRING(asset.criticality), @timestamp),
 recent.asset.business_unit = LAST(TO_STRING(asset.business_unit), @timestamp),
 recent.entity.risk.calculated_level = LAST(TO_STRING(entity.risk.calculated_level), @timestamp),
 recent.entity.risk.calculated_score = LAST(entity.risk.calculated_score, @timestamp),
 recent.entity.risk.calculated_score_norm = LAST(entity.risk.calculated_score_norm, @timestamp)
    BY recent.entity.EngineMetadata.UntypedId
  | EVAL recent.entity.id = CONCAT(\\"generic:\\", recent.entity.EngineMetadata.UntypedId)
  | LOOKUP JOIN latest-index
      ON recent.entity.id == entity.id
  | RENAME
    recent.entity.id AS entity.id,
    recent.entity.EngineMetadata.UntypedId AS entity.EngineMetadata.UntypedId
  | EVAL
    entity.name = COALESCE(recent.entity.name, entity.name),
 entity.source = COALESCE(recent.entity.source, entity.source),
 entity.type = COALESCE(recent.entity.type, entity.type),
 entity.sub_type = COALESCE(recent.entity.sub_type, entity.sub_type),
 entity.url = COALESCE(recent.entity.url, entity.url),
 entity.attributes.Privileged = COALESCE(recent.entity.attributes.Privileged, entity.attributes.Privileged),
 entity.attributes.Asset = COALESCE(recent.entity.attributes.Asset, entity.attributes.Asset),
 entity.attributes.Managed = COALESCE(recent.entity.attributes.Managed, entity.attributes.Managed),
 entity.attributes.Mfa_enabled = COALESCE(recent.entity.attributes.Mfa_enabled, entity.attributes.Mfa_enabled),
 entity.lifecycle.First_seen = COALESCE(recent.entity.lifecycle.First_seen, entity.lifecycle.First_seen),
 entity.lifecycle.Last_activity = COALESCE(recent.entity.lifecycle.Last_activity, entity.lifecycle.Last_activity),
 entity.behaviors.Brute_force_victim = COALESCE(recent.entity.behaviors.Brute_force_victim, entity.behaviors.Brute_force_victim),
 entity.behaviors.New_country_login = COALESCE(recent.entity.behaviors.New_country_login, entity.behaviors.New_country_login),
 entity.behaviors.Used_usb_device = COALESCE(recent.entity.behaviors.Used_usb_device, entity.behaviors.Used_usb_device),
 entity.risk.calculated_level = COALESCE(recent.entity.risk.calculated_level, entity.risk.calculated_level),
 entity.risk.calculated_score = COALESCE(recent.entity.risk.calculated_score, entity.risk.calculated_score),
 entity.risk.calculated_score_norm = COALESCE(recent.entity.risk.calculated_score_norm, entity.risk.calculated_score_norm),
 cloud.account.id = COALESCE(recent.cloud.account.id, cloud.account.id),
 cloud.account.name = COALESCE(recent.cloud.account.name, cloud.account.name),
 cloud.availability_zone = COALESCE(recent.cloud.availability_zone, cloud.availability_zone),
 cloud.instance.id = COALESCE(recent.cloud.instance.id, cloud.instance.id),
 cloud.instance.name = COALESCE(recent.cloud.instance.name, cloud.instance.name),
 cloud.machine.type = COALESCE(recent.cloud.machine.type, cloud.machine.type),
 cloud.project.id = COALESCE(recent.cloud.project.id, cloud.project.id),
 cloud.project.name = COALESCE(recent.cloud.project.name, cloud.project.name),
 cloud.provider = COALESCE(recent.cloud.provider, cloud.provider),
 cloud.region = COALESCE(recent.cloud.region, cloud.region),
 cloud.service.name = COALESCE(recent.cloud.service.name, cloud.service.name),
 host.architecture = COALESCE(recent.host.architecture, host.architecture),
 host.boot.id = COALESCE(recent.host.boot.id, host.boot.id),
 host.cpu.usage = COALESCE(recent.host.cpu.usage, host.cpu.usage),
 host.disk.read.bytes = COALESCE(recent.host.disk.read.bytes, host.disk.read.bytes),
 host.disk.write.bytes = COALESCE(recent.host.disk.write.bytes, host.disk.write.bytes),
 host.domain = COALESCE(recent.host.domain, host.domain),
 host.hostname = COALESCE(recent.host.hostname, host.hostname),
 host.id = COALESCE(recent.host.id, host.id),
 host.mac = COALESCE(recent.host.mac, host.mac),
 host.name = COALESCE(recent.host.name, host.name),
 host.network.egress.bytes = COALESCE(recent.host.network.egress.bytes, host.network.egress.bytes),
 host.network.egress.packets = COALESCE(recent.host.network.egress.packets, host.network.egress.packets),
 host.network.ingress.bytes = COALESCE(recent.host.network.ingress.bytes, host.network.ingress.bytes),
 host.network.ingress.packets = COALESCE(recent.host.network.ingress.packets, host.network.ingress.packets),
 host.pid_ns_ino = COALESCE(recent.host.pid_ns_ino, host.pid_ns_ino),
 host.type = COALESCE(recent.host.type, host.type),
 host.uptime = COALESCE(recent.host.uptime, host.uptime),
 host.ip = COALESCE(recent.host.ip, host.ip),
 user.domain = COALESCE(recent.user.domain, user.domain),
 user.email = COALESCE(recent.user.email, user.email),
 user.roles = COALESCE(recent.user.roles, user.roles),
 user.hash = COALESCE(recent.user.hash, user.hash),
 user.id = COALESCE(recent.user.id, user.id),
 user.name = COALESCE(recent.user.name, user.name),
 user.full_name = COALESCE(recent.user.full_name, user.full_name),
 orchestrator.api_version = COALESCE(recent.orchestrator.api_version, orchestrator.api_version),
 orchestrator.cluster.id = COALESCE(recent.orchestrator.cluster.id, orchestrator.cluster.id),
 orchestrator.cluster.name = COALESCE(recent.orchestrator.cluster.name, orchestrator.cluster.name),
 orchestrator.cluster.url = COALESCE(recent.orchestrator.cluster.url, orchestrator.cluster.url),
 orchestrator.cluster.version = COALESCE(recent.orchestrator.cluster.version, orchestrator.cluster.version),
 orchestrator.namespace = COALESCE(recent.orchestrator.namespace, orchestrator.namespace),
 orchestrator.organization = COALESCE(recent.orchestrator.organization, orchestrator.organization),
 orchestrator.resource.annotation = COALESCE(recent.orchestrator.resource.annotation, orchestrator.resource.annotation),
 orchestrator.resource.id = COALESCE(recent.orchestrator.resource.id, orchestrator.resource.id),
 orchestrator.resource.ip = COALESCE(recent.orchestrator.resource.ip, orchestrator.resource.ip),
 orchestrator.resource.label = COALESCE(recent.orchestrator.resource.label, orchestrator.resource.label),
 orchestrator.resource.name = COALESCE(recent.orchestrator.resource.name, orchestrator.resource.name),
 orchestrator.resource.parent.type = COALESCE(recent.orchestrator.resource.parent.type, orchestrator.resource.parent.type),
 orchestrator.resource.type = COALESCE(recent.orchestrator.resource.type, orchestrator.resource.type),
 orchestrator.type = COALESCE(recent.orchestrator.type, orchestrator.type),
 entity.source = COALESCE(entity.source, recent.entity.source),
 asset.id = COALESCE(recent.asset.id, asset.id),
 asset.name = COALESCE(recent.asset.name, asset.name),
 asset.owner = COALESCE(recent.asset.owner, asset.owner),
 asset.serial_number = COALESCE(recent.asset.serial_number, asset.serial_number),
 asset.model = COALESCE(recent.asset.model, asset.model),
 asset.vendor = COALESCE(recent.asset.vendor, asset.vendor),
 asset.environment = COALESCE(recent.asset.environment, asset.environment),
 asset.criticality = COALESCE(recent.asset.criticality, asset.criticality),
 asset.business_unit = COALESCE(recent.asset.business_unit, asset.business_unit),
 entity.risk.calculated_level = COALESCE(recent.entity.risk.calculated_level, entity.risk.calculated_level),
 entity.risk.calculated_score = COALESCE(recent.entity.risk.calculated_score, entity.risk.calculated_score),
 entity.risk.calculated_score_norm = COALESCE(recent.entity.risk.calculated_score_norm, entity.risk.calculated_score_norm),
    @timestamp = recent.timestamp,
 entity.name = CASE((entity.name IS NULL OR entity.name == \\"\\"), entity.EngineMetadata.UntypedId, entity.name),
 entity.EngineMetadata.Type = \\"generic\\",
    entity.hashedId = HASH(\\"MD5\\", entity.id)
  | KEEP entity.name,
 entity.source,
 entity.type,
 entity.sub_type,
 entity.url,
 entity.attributes.Privileged,
 entity.attributes.Asset,
 entity.attributes.Managed,
 entity.attributes.Mfa_enabled,
 entity.lifecycle.First_seen,
 entity.lifecycle.Last_activity,
 entity.behaviors.Brute_force_victim,
 entity.behaviors.New_country_login,
 entity.behaviors.Used_usb_device,
 entity.risk.calculated_level,
 entity.risk.calculated_score,
 entity.risk.calculated_score_norm,
 cloud.account.id,
 cloud.account.name,
 cloud.availability_zone,
 cloud.instance.id,
 cloud.instance.name,
 cloud.machine.type,
 cloud.project.id,
 cloud.project.name,
 cloud.provider,
 cloud.region,
 cloud.service.name,
 host.architecture,
 host.boot.id,
 host.cpu.usage,
 host.disk.read.bytes,
 host.disk.write.bytes,
 host.domain,
 host.hostname,
 host.id,
 host.mac,
 host.name,
 host.network.egress.bytes,
 host.network.egress.packets,
 host.network.ingress.bytes,
 host.network.ingress.packets,
 host.pid_ns_ino,
 host.type,
 host.uptime,
 host.ip,
 user.domain,
 user.email,
 user.roles,
 user.hash,
 user.id,
 user.name,
 user.full_name,
 orchestrator.api_version,
 orchestrator.cluster.id,
 orchestrator.cluster.name,
 orchestrator.cluster.url,
 orchestrator.cluster.version,
 orchestrator.namespace,
 orchestrator.organization,
 orchestrator.resource.annotation,
 orchestrator.resource.id,
 orchestrator.resource.ip,
 orchestrator.resource.label,
 orchestrator.resource.name,
 orchestrator.resource.parent.type,
 orchestrator.resource.type,
 orchestrator.type,
 entity.source,
 asset.id,
 asset.name,
 asset.owner,
 asset.serial_number,
 asset.model,
 asset.vendor,
 asset.environment,
 asset.criticality,
 asset.business_unit,
 entity.risk.calculated_level,
 entity.risk.calculated_score,
 entity.risk.calculated_score_norm,
 @timestamp,
 entity.id,
 entity.name,
 entity.EngineMetadata.UntypedId,
 entity.hashedId,
 entity.EngineMetadata.Type
  | SORT @timestamp ASC"
`;

exports[`buildLogsExtractionEsqlQuery generates the expected query for host entity description 1`] = `
"FROM test-index-*
    METADATA _index
  | WHERE ((host.entity.id IS NOT NULL AND host.entity.id != \\"\\") OR (host.id IS NOT NULL AND host.id != \\"\\") OR (host.name IS NOT NULL AND host.name != \\"\\") OR (host.hostname IS NOT NULL AND host.hostname != \\"\\"))
      AND @timestamp > TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
  | SORT @timestamp ASC
  | LIMIT 10000
  | EVAL recent.entity.EngineMetadata.UntypedId = CASE((host.entity.id IS NOT NULL AND host.entity.id != \\"\\"), host.entity.id,
(host.id IS NOT NULL AND host.id != \\"\\"), host.id,
(host.name IS NOT NULL AND host.name != \\"\\" AND host.domain IS NOT NULL AND host.domain != \\"\\"), CONCAT(host.name, \\".\\", host.domain),
(host.hostname IS NOT NULL AND host.hostname != \\"\\" AND host.domain IS NOT NULL AND host.domain != \\"\\"), CONCAT(host.hostname, \\".\\", host.domain),
(host.name IS NOT NULL AND host.name != \\"\\"), host.name,
(host.hostname IS NOT NULL AND host.hostname != \\"\\"), host.hostname, NULL)
  | STATS
    recent.timestamp = MAX(@timestamp),
    recent.entity.name = LAST(TO_STRING(host.name), @timestamp),
 recent.host.entity.id = FIRST(TO_STRING(host.entity.id), @timestamp),
 recent.host.name = MV_DEDUPE(TOP(TO_STRING(host.name), 10)),
 recent.host.domain = MV_DEDUPE(TOP(TO_STRING(host.domain), 10)),
 recent.host.hostname = MV_DEDUPE(TOP(TO_STRING(host.hostname), 10)),
 recent.host.id = MV_DEDUPE(TOP(TO_STRING(host.id), 10)),
 recent.host.os.name = MV_DEDUPE(TOP(TO_STRING(host.os.name), 10)),
 recent.host.os.type = MV_DEDUPE(TOP(TO_STRING(host.os.type), 10)),
 recent.host.ip = MV_DEDUPE(TOP(TO_IP(host.ip), 10)),
 recent.host.mac = MV_DEDUPE(TOP(TO_STRING(host.mac), 10)),
 recent.host.type = MV_DEDUPE(TOP(TO_STRING(host.type), 10)),
 recent.host.architecture = MV_DEDUPE(TOP(TO_STRING(host.architecture), 10)),
 recent.entity.source = FIRST(TO_STRING(_index), @timestamp),
 recent.asset.id = LAST(TO_STRING(asset.id), @timestamp),
 recent.asset.name = LAST(TO_STRING(asset.name), @timestamp),
 recent.asset.owner = LAST(TO_STRING(asset.owner), @timestamp),
 recent.asset.serial_number = LAST(TO_STRING(asset.serial_number), @timestamp),
 recent.asset.model = LAST(TO_STRING(asset.model), @timestamp),
 recent.asset.vendor = LAST(TO_STRING(asset.vendor), @timestamp),
 recent.asset.environment = LAST(TO_STRING(asset.environment), @timestamp),
 recent.asset.criticality = LAST(TO_STRING(asset.criticality), @timestamp),
 recent.asset.business_unit = LAST(TO_STRING(asset.business_unit), @timestamp),
 recent.host.risk.calculated_level = LAST(TO_STRING(host.risk.calculated_level), @timestamp),
 recent.host.risk.calculated_score = LAST(host.risk.calculated_score, @timestamp),
 recent.host.risk.calculated_score_norm = LAST(host.risk.calculated_score_norm, @timestamp),
 recent.entity.source = LAST(TO_STRING(host.entity.source), @timestamp),
 recent.entity.type = LAST(TO_STRING(host.entity.type), @timestamp),
 recent.entity.sub_type = LAST(TO_STRING(host.entity.sub_type), @timestamp),
 recent.entity.url = LAST(TO_STRING(host.entity.url), @timestamp),
 recent.entity.attributes.Privileged = LAST(TO_BOOLEAN(host.entity.attributes.Privileged), @timestamp),
 recent.entity.attributes.Asset = LAST(TO_BOOLEAN(host.entity.attributes.Asset), @timestamp),
 recent.entity.attributes.Managed = LAST(TO_BOOLEAN(host.entity.attributes.Managed), @timestamp),
 recent.entity.attributes.Mfa_enabled = LAST(TO_BOOLEAN(host.entity.attributes.Mfa_enabled), @timestamp),
 recent.entity.lifecycle.First_seen = LAST(TO_DATETIME(host.entity.lifecycle.First_seen), @timestamp),
 recent.entity.lifecycle.Last_activity = LAST(TO_DATETIME(host.entity.lifecycle.Last_activity), @timestamp),
 recent.entity.behaviors.Brute_force_victim = LAST(TO_BOOLEAN(host.entity.behaviors.Brute_force_victim), @timestamp),
 recent.entity.behaviors.New_country_login = LAST(TO_BOOLEAN(host.entity.behaviors.New_country_login), @timestamp),
 recent.entity.behaviors.Used_usb_device = LAST(TO_BOOLEAN(host.entity.behaviors.Used_usb_device), @timestamp),
 recent.entity.risk.calculated_level = LAST(TO_STRING(host.entity.risk.calculated_level), @timestamp),
 recent.entity.risk.calculated_score = LAST(host.entity.risk.calculated_score, @timestamp),
 recent.entity.risk.calculated_score_norm = LAST(host.entity.risk.calculated_score_norm, @timestamp),
 recent.entity.relationships.Communicates_with = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.Communicates_with), 10)),
 recent.entity.relationships.Depends_on = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.Depends_on), 10)),
 recent.entity.relationships.Dependent_of = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.Dependent_of), 10)),
 recent.entity.relationships.Owned_by = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.Owned_by), 10)),
 recent.entity.relationships.Accessed_frequently_by = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.Accessed_frequently_by), 10))
    BY recent.entity.EngineMetadata.UntypedId
  | EVAL recent.entity.id = CONCAT(\\"host:\\", recent.entity.EngineMetadata.UntypedId)
  | LOOKUP JOIN latest-index
      ON recent.entity.id == entity.id
  | RENAME
    recent.entity.id AS entity.id,
    recent.entity.EngineMetadata.UntypedId AS entity.EngineMetadata.UntypedId
  | EVAL
    entity.name = COALESCE(recent.entity.name, entity.name),
 host.entity.id = COALESCE(host.entity.id, recent.host.entity.id),
 host.name = MV_DEDUPE(COALESCE(MV_APPEND(recent.host.name, host.name), recent.host.name)),
 host.domain = MV_DEDUPE(COALESCE(MV_APPEND(recent.host.domain, host.domain), recent.host.domain)),
 host.hostname = MV_DEDUPE(COALESCE(MV_APPEND(recent.host.hostname, host.hostname), recent.host.hostname)),
 host.id = MV_DEDUPE(COALESCE(MV_APPEND(recent.host.id, host.id), recent.host.id)),
 host.os.name = MV_DEDUPE(COALESCE(MV_APPEND(recent.host.os.name, host.os.name), recent.host.os.name)),
 host.os.type = MV_DEDUPE(COALESCE(MV_APPEND(recent.host.os.type, host.os.type), recent.host.os.type)),
 host.ip = MV_DEDUPE(COALESCE(MV_APPEND(recent.host.ip, host.ip), recent.host.ip)),
 host.mac = MV_DEDUPE(COALESCE(MV_APPEND(recent.host.mac, host.mac), recent.host.mac)),
 host.type = MV_DEDUPE(COALESCE(MV_APPEND(recent.host.type, host.type), recent.host.type)),
 host.architecture = MV_DEDUPE(COALESCE(MV_APPEND(recent.host.architecture, host.architecture), recent.host.architecture)),
 entity.source = COALESCE(entity.source, recent.entity.source),
 asset.id = COALESCE(recent.asset.id, asset.id),
 asset.name = COALESCE(recent.asset.name, asset.name),
 asset.owner = COALESCE(recent.asset.owner, asset.owner),
 asset.serial_number = COALESCE(recent.asset.serial_number, asset.serial_number),
 asset.model = COALESCE(recent.asset.model, asset.model),
 asset.vendor = COALESCE(recent.asset.vendor, asset.vendor),
 asset.environment = COALESCE(recent.asset.environment, asset.environment),
 asset.criticality = COALESCE(recent.asset.criticality, asset.criticality),
 asset.business_unit = COALESCE(recent.asset.business_unit, asset.business_unit),
 host.risk.calculated_level = COALESCE(recent.host.risk.calculated_level, host.risk.calculated_level),
 host.risk.calculated_score = COALESCE(recent.host.risk.calculated_score, host.risk.calculated_score),
 host.risk.calculated_score_norm = COALESCE(recent.host.risk.calculated_score_norm, host.risk.calculated_score_norm),
 entity.source = COALESCE(recent.entity.source, entity.source),
 entity.type = COALESCE(recent.entity.type, entity.type),
 entity.sub_type = COALESCE(recent.entity.sub_type, entity.sub_type),
 entity.url = COALESCE(recent.entity.url, entity.url),
 entity.attributes.Privileged = COALESCE(recent.entity.attributes.Privileged, entity.attributes.Privileged),
 entity.attributes.Asset = COALESCE(recent.entity.attributes.Asset, entity.attributes.Asset),
 entity.attributes.Managed = COALESCE(recent.entity.attributes.Managed, entity.attributes.Managed),
 entity.attributes.Mfa_enabled = COALESCE(recent.entity.attributes.Mfa_enabled, entity.attributes.Mfa_enabled),
 entity.lifecycle.First_seen = COALESCE(recent.entity.lifecycle.First_seen, entity.lifecycle.First_seen),
 entity.lifecycle.Last_activity = COALESCE(recent.entity.lifecycle.Last_activity, entity.lifecycle.Last_activity),
 entity.behaviors.Brute_force_victim = COALESCE(recent.entity.behaviors.Brute_force_victim, entity.behaviors.Brute_force_victim),
 entity.behaviors.New_country_login = COALESCE(recent.entity.behaviors.New_country_login, entity.behaviors.New_country_login),
 entity.behaviors.Used_usb_device = COALESCE(recent.entity.behaviors.Used_usb_device, entity.behaviors.Used_usb_device),
 entity.risk.calculated_level = COALESCE(recent.entity.risk.calculated_level, entity.risk.calculated_level),
 entity.risk.calculated_score = COALESCE(recent.entity.risk.calculated_score, entity.risk.calculated_score),
 entity.risk.calculated_score_norm = COALESCE(recent.entity.risk.calculated_score_norm, entity.risk.calculated_score_norm),
 entity.relationships.Communicates_with = MV_DEDUPE(COALESCE(MV_APPEND(recent.entity.relationships.Communicates_with, entity.relationships.Communicates_with), recent.entity.relationships.Communicates_with)),
 entity.relationships.Depends_on = MV_DEDUPE(COALESCE(MV_APPEND(recent.entity.relationships.Depends_on, entity.relationships.Depends_on), recent.entity.relationships.Depends_on)),
 entity.relationships.Dependent_of = MV_DEDUPE(COALESCE(MV_APPEND(recent.entity.relationships.Dependent_of, entity.relationships.Dependent_of), recent.entity.relationships.Dependent_of)),
 entity.relationships.Owned_by = MV_DEDUPE(COALESCE(MV_APPEND(recent.entity.relationships.Owned_by, entity.relationships.Owned_by), recent.entity.relationships.Owned_by)),
 entity.relationships.Accessed_frequently_by = MV_DEDUPE(COALESCE(MV_APPEND(recent.entity.relationships.Accessed_frequently_by, entity.relationships.Accessed_frequently_by), recent.entity.relationships.Accessed_frequently_by)),
    @timestamp = recent.timestamp,
 entity.name = CASE((entity.name IS NULL OR entity.name == \\"\\"), entity.EngineMetadata.UntypedId, entity.name),
 entity.EngineMetadata.Type = \\"host\\",
 entity.type = COALESCE(entity.type, \\"Host\\"),
    entity.hashedId = HASH(\\"MD5\\", entity.id)
  | KEEP entity.name,
 host.entity.id,
 host.name,
 host.domain,
 host.hostname,
 host.id,
 host.os.name,
 host.os.type,
 host.ip,
 host.mac,
 host.type,
 host.architecture,
 entity.source,
 asset.id,
 asset.name,
 asset.owner,
 asset.serial_number,
 asset.model,
 asset.vendor,
 asset.environment,
 asset.criticality,
 asset.business_unit,
 host.risk.calculated_level,
 host.risk.calculated_score,
 host.risk.calculated_score_norm,
 entity.source,
 entity.type,
 entity.sub_type,
 entity.url,
 entity.attributes.Privileged,
 entity.attributes.Asset,
 entity.attributes.Managed,
 entity.attributes.Mfa_enabled,
 entity.lifecycle.First_seen,
 entity.lifecycle.Last_activity,
 entity.behaviors.Brute_force_victim,
 entity.behaviors.New_country_login,
 entity.behaviors.Used_usb_device,
 entity.risk.calculated_level,
 entity.risk.calculated_score,
 entity.risk.calculated_score_norm,
 entity.relationships.Communicates_with,
 entity.relationships.Depends_on,
 entity.relationships.Dependent_of,
 entity.relationships.Owned_by,
 entity.relationships.Accessed_frequently_by,
 @timestamp,
 entity.id,
 entity.name,
 entity.EngineMetadata.UntypedId,
 entity.hashedId,
 entity.EngineMetadata.Type
  | SORT @timestamp ASC"
`;

exports[`buildLogsExtractionEsqlQuery generates the expected query for service entity description 1`] = `
"FROM test-index-*
    METADATA _index
  | WHERE ((service.entity.id IS NOT NULL AND service.entity.id != \\"\\") OR (service.name IS NOT NULL AND service.name != \\"\\"))
      AND @timestamp > TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
  | SORT @timestamp ASC
  | LIMIT 10000
  | EVAL recent.entity.EngineMetadata.UntypedId = CASE((service.entity.id IS NOT NULL AND service.entity.id != \\"\\"), service.entity.id,
(service.name IS NOT NULL AND service.name != \\"\\"), service.name, NULL)
  | STATS
    recent.timestamp = MAX(@timestamp),
    recent.entity.name = LAST(TO_STRING(service.name), @timestamp),
 recent.service.entity.id = FIRST(TO_STRING(service.entity.id), @timestamp),
 recent.service.name = MV_DEDUPE(TOP(TO_STRING(service.name), 10)),
 recent.service.address = MV_DEDUPE(TOP(TO_STRING(service.address), 10)),
 recent.service.environment = MV_DEDUPE(TOP(TO_STRING(service.environment), 10)),
 recent.service.ephemeral_id = MV_DEDUPE(TOP(TO_STRING(service.ephemeral_id), 10)),
 recent.service.id = MV_DEDUPE(TOP(TO_STRING(service.id), 10)),
 recent.service.node.name = MV_DEDUPE(TOP(TO_STRING(service.node.name), 10)),
 recent.service.node.roles = MV_DEDUPE(TOP(TO_STRING(service.node.roles), 10)),
 recent.service.node.role = MV_DEDUPE(TOP(TO_STRING(service.node.role), 10)),
 recent.service.state = LAST(TO_STRING(service.state), @timestamp),
 recent.service.type = MV_DEDUPE(TOP(TO_STRING(service.type), 10)),
 recent.service.version = LAST(TO_STRING(service.version), @timestamp),
 recent.entity.source = FIRST(TO_STRING(_index), @timestamp),
 recent.asset.id = LAST(TO_STRING(asset.id), @timestamp),
 recent.asset.name = LAST(TO_STRING(asset.name), @timestamp),
 recent.asset.owner = LAST(TO_STRING(asset.owner), @timestamp),
 recent.asset.serial_number = LAST(TO_STRING(asset.serial_number), @timestamp),
 recent.asset.model = LAST(TO_STRING(asset.model), @timestamp),
 recent.asset.vendor = LAST(TO_STRING(asset.vendor), @timestamp),
 recent.asset.environment = LAST(TO_STRING(asset.environment), @timestamp),
 recent.asset.criticality = LAST(TO_STRING(asset.criticality), @timestamp),
 recent.asset.business_unit = LAST(TO_STRING(asset.business_unit), @timestamp),
 recent.service.risk.calculated_level = LAST(TO_STRING(service.risk.calculated_level), @timestamp),
 recent.service.risk.calculated_score = LAST(service.risk.calculated_score, @timestamp),
 recent.service.risk.calculated_score_norm = LAST(service.risk.calculated_score_norm, @timestamp),
 recent.entity.source = LAST(TO_STRING(service.entity.source), @timestamp),
 recent.entity.type = LAST(TO_STRING(service.entity.type), @timestamp),
 recent.entity.sub_type = LAST(TO_STRING(service.entity.sub_type), @timestamp),
 recent.entity.url = LAST(TO_STRING(service.entity.url), @timestamp),
 recent.entity.attributes.Privileged = LAST(TO_BOOLEAN(service.entity.attributes.Privileged), @timestamp),
 recent.entity.attributes.Asset = LAST(TO_BOOLEAN(service.entity.attributes.Asset), @timestamp),
 recent.entity.attributes.Managed = LAST(TO_BOOLEAN(service.entity.attributes.Managed), @timestamp),
 recent.entity.attributes.Mfa_enabled = LAST(TO_BOOLEAN(service.entity.attributes.Mfa_enabled), @timestamp),
 recent.entity.lifecycle.First_seen = LAST(TO_DATETIME(service.entity.lifecycle.First_seen), @timestamp),
 recent.entity.lifecycle.Last_activity = LAST(TO_DATETIME(service.entity.lifecycle.Last_activity), @timestamp),
 recent.entity.behaviors.Brute_force_victim = LAST(TO_BOOLEAN(service.entity.behaviors.Brute_force_victim), @timestamp),
 recent.entity.behaviors.New_country_login = LAST(TO_BOOLEAN(service.entity.behaviors.New_country_login), @timestamp),
 recent.entity.behaviors.Used_usb_device = LAST(TO_BOOLEAN(service.entity.behaviors.Used_usb_device), @timestamp),
 recent.entity.risk.calculated_level = LAST(TO_STRING(service.entity.risk.calculated_level), @timestamp),
 recent.entity.risk.calculated_score = LAST(service.entity.risk.calculated_score, @timestamp),
 recent.entity.risk.calculated_score_norm = LAST(service.entity.risk.calculated_score_norm, @timestamp),
 recent.entity.relationships.Communicates_with = MV_DEDUPE(TOP(TO_STRING(service.entity.relationships.Communicates_with), 10)),
 recent.entity.relationships.Depends_on = MV_DEDUPE(TOP(TO_STRING(service.entity.relationships.Depends_on), 10)),
 recent.entity.relationships.Dependent_of = MV_DEDUPE(TOP(TO_STRING(service.entity.relationships.Dependent_of), 10))
    BY recent.entity.EngineMetadata.UntypedId
  | EVAL recent.entity.id = CONCAT(\\"service:\\", recent.entity.EngineMetadata.UntypedId)
  | LOOKUP JOIN latest-index
      ON recent.entity.id == entity.id
  | RENAME
    recent.entity.id AS entity.id,
    recent.entity.EngineMetadata.UntypedId AS entity.EngineMetadata.UntypedId
  | EVAL
    entity.name = COALESCE(recent.entity.name, entity.name),
 service.entity.id = COALESCE(service.entity.id, recent.service.entity.id),
 service.name = MV_DEDUPE(COALESCE(MV_APPEND(recent.service.name, service.name), recent.service.name)),
 service.address = MV_DEDUPE(COALESCE(MV_APPEND(recent.service.address, service.address), recent.service.address)),
 service.environment = MV_DEDUPE(COALESCE(MV_APPEND(recent.service.environment, service.environment), recent.service.environment)),
 service.ephemeral_id = MV_DEDUPE(COALESCE(MV_APPEND(recent.service.ephemeral_id, service.ephemeral_id), recent.service.ephemeral_id)),
 service.id = MV_DEDUPE(COALESCE(MV_APPEND(recent.service.id, service.id), recent.service.id)),
 service.node.name = MV_DEDUPE(COALESCE(MV_APPEND(recent.service.node.name, service.node.name), recent.service.node.name)),
 service.node.roles = MV_DEDUPE(COALESCE(MV_APPEND(recent.service.node.roles, service.node.roles), recent.service.node.roles)),
 service.node.role = MV_DEDUPE(COALESCE(MV_APPEND(recent.service.node.role, service.node.role), recent.service.node.role)),
 service.state = COALESCE(recent.service.state, service.state),
 service.type = MV_DEDUPE(COALESCE(MV_APPEND(recent.service.type, service.type), recent.service.type)),
 service.version = COALESCE(recent.service.version, service.version),
 entity.source = COALESCE(entity.source, recent.entity.source),
 asset.id = COALESCE(recent.asset.id, asset.id),
 asset.name = COALESCE(recent.asset.name, asset.name),
 asset.owner = COALESCE(recent.asset.owner, asset.owner),
 asset.serial_number = COALESCE(recent.asset.serial_number, asset.serial_number),
 asset.model = COALESCE(recent.asset.model, asset.model),
 asset.vendor = COALESCE(recent.asset.vendor, asset.vendor),
 asset.environment = COALESCE(recent.asset.environment, asset.environment),
 asset.criticality = COALESCE(recent.asset.criticality, asset.criticality),
 asset.business_unit = COALESCE(recent.asset.business_unit, asset.business_unit),
 service.risk.calculated_level = COALESCE(recent.service.risk.calculated_level, service.risk.calculated_level),
 service.risk.calculated_score = COALESCE(recent.service.risk.calculated_score, service.risk.calculated_score),
 service.risk.calculated_score_norm = COALESCE(recent.service.risk.calculated_score_norm, service.risk.calculated_score_norm),
 entity.source = COALESCE(recent.entity.source, entity.source),
 entity.type = COALESCE(recent.entity.type, entity.type),
 entity.sub_type = COALESCE(recent.entity.sub_type, entity.sub_type),
 entity.url = COALESCE(recent.entity.url, entity.url),
 entity.attributes.Privileged = COALESCE(recent.entity.attributes.Privileged, entity.attributes.Privileged),
 entity.attributes.Asset = COALESCE(recent.entity.attributes.Asset, entity.attributes.Asset),
 entity.attributes.Managed = COALESCE(recent.entity.attributes.Managed, entity.attributes.Managed),
 entity.attributes.Mfa_enabled = COALESCE(recent.entity.attributes.Mfa_enabled, entity.attributes.Mfa_enabled),
 entity.lifecycle.First_seen = COALESCE(recent.entity.lifecycle.First_seen, entity.lifecycle.First_seen),
 entity.lifecycle.Last_activity = COALESCE(recent.entity.lifecycle.Last_activity, entity.lifecycle.Last_activity),
 entity.behaviors.Brute_force_victim = COALESCE(recent.entity.behaviors.Brute_force_victim, entity.behaviors.Brute_force_victim),
 entity.behaviors.New_country_login = COALESCE(recent.entity.behaviors.New_country_login, entity.behaviors.New_country_login),
 entity.behaviors.Used_usb_device = COALESCE(recent.entity.behaviors.Used_usb_device, entity.behaviors.Used_usb_device),
 entity.risk.calculated_level = COALESCE(recent.entity.risk.calculated_level, entity.risk.calculated_level),
 entity.risk.calculated_score = COALESCE(recent.entity.risk.calculated_score, entity.risk.calculated_score),
 entity.risk.calculated_score_norm = COALESCE(recent.entity.risk.calculated_score_norm, entity.risk.calculated_score_norm),
 entity.relationships.Communicates_with = MV_DEDUPE(COALESCE(MV_APPEND(recent.entity.relationships.Communicates_with, entity.relationships.Communicates_with), recent.entity.relationships.Communicates_with)),
 entity.relationships.Depends_on = MV_DEDUPE(COALESCE(MV_APPEND(recent.entity.relationships.Depends_on, entity.relationships.Depends_on), recent.entity.relationships.Depends_on)),
 entity.relationships.Dependent_of = MV_DEDUPE(COALESCE(MV_APPEND(recent.entity.relationships.Dependent_of, entity.relationships.Dependent_of), recent.entity.relationships.Dependent_of)),
    @timestamp = recent.timestamp,
 entity.name = CASE((entity.name IS NULL OR entity.name == \\"\\"), entity.EngineMetadata.UntypedId, entity.name),
 entity.EngineMetadata.Type = \\"service\\",
 entity.type = COALESCE(entity.type, \\"Service\\"),
    entity.hashedId = HASH(\\"MD5\\", entity.id)
  | KEEP entity.name,
 service.entity.id,
 service.name,
 service.address,
 service.environment,
 service.ephemeral_id,
 service.id,
 service.node.name,
 service.node.roles,
 service.node.role,
 service.state,
 service.type,
 service.version,
 entity.source,
 asset.id,
 asset.name,
 asset.owner,
 asset.serial_number,
 asset.model,
 asset.vendor,
 asset.environment,
 asset.criticality,
 asset.business_unit,
 service.risk.calculated_level,
 service.risk.calculated_score,
 service.risk.calculated_score_norm,
 entity.source,
 entity.type,
 entity.sub_type,
 entity.url,
 entity.attributes.Privileged,
 entity.attributes.Asset,
 entity.attributes.Managed,
 entity.attributes.Mfa_enabled,
 entity.lifecycle.First_seen,
 entity.lifecycle.Last_activity,
 entity.behaviors.Brute_force_victim,
 entity.behaviors.New_country_login,
 entity.behaviors.Used_usb_device,
 entity.risk.calculated_level,
 entity.risk.calculated_score,
 entity.risk.calculated_score_norm,
 entity.relationships.Communicates_with,
 entity.relationships.Depends_on,
 entity.relationships.Dependent_of,
 @timestamp,
 entity.id,
 entity.name,
 entity.EngineMetadata.UntypedId,
 entity.hashedId,
 entity.EngineMetadata.Type
  | SORT @timestamp ASC"
`;

exports[`buildLogsExtractionEsqlQuery generates the expected query for user entity description 1`] = `
"FROM test-index-*
    METADATA _index
  | WHERE ((user.entity.id IS NOT NULL AND user.entity.id != \\"\\") OR (user.id IS NOT NULL AND user.id != \\"\\") OR (user.name IS NOT NULL AND user.name != \\"\\") OR (user.email IS NOT NULL AND user.email != \\"\\"))
      AND @timestamp > TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
  | SORT @timestamp ASC
  | LIMIT 10000
  | EVAL recent.entity.EngineMetadata.UntypedId = CASE((user.entity.id IS NOT NULL AND user.entity.id != \\"\\"), user.entity.id,
(user.name IS NOT NULL AND user.name != \\"\\" AND host.entity.id IS NOT NULL AND host.entity.id != \\"\\"), CONCAT(user.name, \\"@\\", host.entity.id),
(user.name IS NOT NULL AND user.name != \\"\\" AND host.id IS NOT NULL AND host.id != \\"\\"), CONCAT(user.name, \\"@\\", host.id),
(user.name IS NOT NULL AND user.name != \\"\\" AND host.name IS NOT NULL AND host.name != \\"\\"), CONCAT(user.name, \\"@\\", host.name),
(user.id IS NOT NULL AND user.id != \\"\\"), user.id,
(user.email IS NOT NULL AND user.email != \\"\\"), user.email,
(user.name IS NOT NULL AND user.name != \\"\\" AND user.domain IS NOT NULL AND user.domain != \\"\\"), CONCAT(user.name, \\"@\\", user.domain),
(user.name IS NOT NULL AND user.name != \\"\\"), user.name, NULL)
  | STATS
    recent.timestamp = MAX(@timestamp),
    recent.entity.name = LAST(TO_STRING(user.name), @timestamp),
 recent.user.entity.id = FIRST(TO_STRING(user.entity.id), @timestamp),
 recent.user.domain = MV_DEDUPE(TOP(TO_STRING(user.domain), 10)),
 recent.user.email = MV_DEDUPE(TOP(TO_STRING(user.email), 10)),
 recent.user.name = MV_DEDUPE(TOP(TO_STRING(user.name), 10)),
 recent.user.full_name = MV_DEDUPE(TOP(TO_STRING(user.full_name), 10)),
 recent.user.hash = MV_DEDUPE(TOP(TO_STRING(user.hash), 10)),
 recent.user.id = MV_DEDUPE(TOP(TO_STRING(user.id), 10)),
 recent.user.roles = MV_DEDUPE(TOP(TO_STRING(user.roles), 10)),
 recent.entity.source = FIRST(TO_STRING(_index), @timestamp),
 recent.asset.id = LAST(TO_STRING(asset.id), @timestamp),
 recent.asset.name = LAST(TO_STRING(asset.name), @timestamp),
 recent.asset.owner = LAST(TO_STRING(asset.owner), @timestamp),
 recent.asset.serial_number = LAST(TO_STRING(asset.serial_number), @timestamp),
 recent.asset.model = LAST(TO_STRING(asset.model), @timestamp),
 recent.asset.vendor = LAST(TO_STRING(asset.vendor), @timestamp),
 recent.asset.environment = LAST(TO_STRING(asset.environment), @timestamp),
 recent.asset.criticality = LAST(TO_STRING(asset.criticality), @timestamp),
 recent.asset.business_unit = LAST(TO_STRING(asset.business_unit), @timestamp),
 recent.user.risk.calculated_level = LAST(TO_STRING(user.risk.calculated_level), @timestamp),
 recent.user.risk.calculated_score = LAST(user.risk.calculated_score, @timestamp),
 recent.user.risk.calculated_score_norm = LAST(user.risk.calculated_score_norm, @timestamp),
 recent.entity.source = LAST(TO_STRING(user.entity.source), @timestamp),
 recent.entity.type = LAST(TO_STRING(user.entity.type), @timestamp),
 recent.entity.sub_type = LAST(TO_STRING(user.entity.sub_type), @timestamp),
 recent.entity.url = LAST(TO_STRING(user.entity.url), @timestamp),
 recent.entity.attributes.Privileged = LAST(TO_BOOLEAN(user.entity.attributes.Privileged), @timestamp),
 recent.entity.attributes.Asset = LAST(TO_BOOLEAN(user.entity.attributes.Asset), @timestamp),
 recent.entity.attributes.Managed = LAST(TO_BOOLEAN(user.entity.attributes.Managed), @timestamp),
 recent.entity.attributes.Mfa_enabled = LAST(TO_BOOLEAN(user.entity.attributes.Mfa_enabled), @timestamp),
 recent.entity.lifecycle.First_seen = LAST(TO_DATETIME(user.entity.lifecycle.First_seen), @timestamp),
 recent.entity.lifecycle.Last_activity = LAST(TO_DATETIME(user.entity.lifecycle.Last_activity), @timestamp),
 recent.entity.behaviors.Brute_force_victim = LAST(TO_BOOLEAN(user.entity.behaviors.Brute_force_victim), @timestamp),
 recent.entity.behaviors.New_country_login = LAST(TO_BOOLEAN(user.entity.behaviors.New_country_login), @timestamp),
 recent.entity.behaviors.Used_usb_device = LAST(TO_BOOLEAN(user.entity.behaviors.Used_usb_device), @timestamp),
 recent.entity.risk.calculated_level = LAST(TO_STRING(user.entity.risk.calculated_level), @timestamp),
 recent.entity.risk.calculated_score = LAST(user.entity.risk.calculated_score, @timestamp),
 recent.entity.risk.calculated_score_norm = LAST(user.entity.risk.calculated_score_norm, @timestamp),
 recent.host.entity.id = MV_DEDUPE(TOP(TO_STRING(host.entity.id), 10)),
 recent.host.id = MV_DEDUPE(TOP(TO_STRING(host.id), 10)),
 recent.host.name = MV_DEDUPE(TOP(TO_STRING(host.name), 10)),
 recent.entity.relationships.Accesses_frequently = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.Accesses_frequently), 10)),
 recent.entity.relationships.Owns = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.Owns), 10)),
 recent.entity.relationships.Supervises = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.Supervises), 10)),
 recent.entity.relationships.Supervised_by = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.Supervised_by), 10))
    BY recent.entity.EngineMetadata.UntypedId
  | EVAL recent.entity.id = CONCAT(\\"user:\\", recent.entity.EngineMetadata.UntypedId)
  | LOOKUP JOIN latest-index
      ON recent.entity.id == entity.id
  | RENAME
    recent.entity.id AS entity.id,
    recent.entity.EngineMetadata.UntypedId AS entity.EngineMetadata.UntypedId
  | EVAL
    entity.name = COALESCE(recent.entity.name, entity.name),
 user.entity.id = COALESCE(user.entity.id, recent.user.entity.id),
 user.domain = MV_DEDUPE(COALESCE(MV_APPEND(recent.user.domain, user.domain), recent.user.domain)),
 user.email = MV_DEDUPE(COALESCE(MV_APPEND(recent.user.email, user.email), recent.user.email)),
 user.name = MV_DEDUPE(COALESCE(MV_APPEND(recent.user.name, user.name), recent.user.name)),
 user.full_name = MV_DEDUPE(COALESCE(MV_APPEND(recent.user.full_name, user.full_name), recent.user.full_name)),
 user.hash = MV_DEDUPE(COALESCE(MV_APPEND(recent.user.hash, user.hash), recent.user.hash)),
 user.id = MV_DEDUPE(COALESCE(MV_APPEND(recent.user.id, user.id), recent.user.id)),
 user.roles = MV_DEDUPE(COALESCE(MV_APPEND(recent.user.roles, user.roles), recent.user.roles)),
 entity.source = COALESCE(entity.source, recent.entity.source),
 asset.id = COALESCE(recent.asset.id, asset.id),
 asset.name = COALESCE(recent.asset.name, asset.name),
 asset.owner = COALESCE(recent.asset.owner, asset.owner),
 asset.serial_number = COALESCE(recent.asset.serial_number, asset.serial_number),
 asset.model = COALESCE(recent.asset.model, asset.model),
 asset.vendor = COALESCE(recent.asset.vendor, asset.vendor),
 asset.environment = COALESCE(recent.asset.environment, asset.environment),
 asset.criticality = COALESCE(recent.asset.criticality, asset.criticality),
 asset.business_unit = COALESCE(recent.asset.business_unit, asset.business_unit),
 user.risk.calculated_level = COALESCE(recent.user.risk.calculated_level, user.risk.calculated_level),
 user.risk.calculated_score = COALESCE(recent.user.risk.calculated_score, user.risk.calculated_score),
 user.risk.calculated_score_norm = COALESCE(recent.user.risk.calculated_score_norm, user.risk.calculated_score_norm),
 entity.source = COALESCE(recent.entity.source, entity.source),
 entity.type = COALESCE(recent.entity.type, entity.type),
 entity.sub_type = COALESCE(recent.entity.sub_type, entity.sub_type),
 entity.url = COALESCE(recent.entity.url, entity.url),
 entity.attributes.Privileged = COALESCE(recent.entity.attributes.Privileged, entity.attributes.Privileged),
 entity.attributes.Asset = COALESCE(recent.entity.attributes.Asset, entity.attributes.Asset),
 entity.attributes.Managed = COALESCE(recent.entity.attributes.Managed, entity.attributes.Managed),
 entity.attributes.Mfa_enabled = COALESCE(recent.entity.attributes.Mfa_enabled, entity.attributes.Mfa_enabled),
 entity.lifecycle.First_seen = COALESCE(recent.entity.lifecycle.First_seen, entity.lifecycle.First_seen),
 entity.lifecycle.Last_activity = COALESCE(recent.entity.lifecycle.Last_activity, entity.lifecycle.Last_activity),
 entity.behaviors.Brute_force_victim = COALESCE(recent.entity.behaviors.Brute_force_victim, entity.behaviors.Brute_force_victim),
 entity.behaviors.New_country_login = COALESCE(recent.entity.behaviors.New_country_login, entity.behaviors.New_country_login),
 entity.behaviors.Used_usb_device = COALESCE(recent.entity.behaviors.Used_usb_device, entity.behaviors.Used_usb_device),
 entity.risk.calculated_level = COALESCE(recent.entity.risk.calculated_level, entity.risk.calculated_level),
 entity.risk.calculated_score = COALESCE(recent.entity.risk.calculated_score, entity.risk.calculated_score),
 entity.risk.calculated_score_norm = COALESCE(recent.entity.risk.calculated_score_norm, entity.risk.calculated_score_norm),
 host.entity.id = MV_DEDUPE(COALESCE(MV_APPEND(recent.host.entity.id, host.entity.id), recent.host.entity.id)),
 host.id = MV_DEDUPE(COALESCE(MV_APPEND(recent.host.id, host.id), recent.host.id)),
 host.name = MV_DEDUPE(COALESCE(MV_APPEND(recent.host.name, host.name), recent.host.name)),
 entity.relationships.Accesses_frequently = MV_DEDUPE(COALESCE(MV_APPEND(recent.entity.relationships.Accesses_frequently, entity.relationships.Accesses_frequently), recent.entity.relationships.Accesses_frequently)),
 entity.relationships.Owns = MV_DEDUPE(COALESCE(MV_APPEND(recent.entity.relationships.Owns, entity.relationships.Owns), recent.entity.relationships.Owns)),
 entity.relationships.Supervises = MV_DEDUPE(COALESCE(MV_APPEND(recent.entity.relationships.Supervises, entity.relationships.Supervises), recent.entity.relationships.Supervises)),
 entity.relationships.Supervised_by = MV_DEDUPE(COALESCE(MV_APPEND(recent.entity.relationships.Supervised_by, entity.relationships.Supervised_by), recent.entity.relationships.Supervised_by)),
    @timestamp = recent.timestamp,
 entity.name = CASE((entity.name IS NULL OR entity.name == \\"\\"), entity.EngineMetadata.UntypedId, entity.name),
 entity.EngineMetadata.Type = \\"user\\",
 entity.type = COALESCE(entity.type, \\"Identity\\"),
    entity.hashedId = HASH(\\"MD5\\", entity.id)
  | KEEP entity.name,
 user.entity.id,
 user.domain,
 user.email,
 user.name,
 user.full_name,
 user.hash,
 user.id,
 user.roles,
 entity.source,
 asset.id,
 asset.name,
 asset.owner,
 asset.serial_number,
 asset.model,
 asset.vendor,
 asset.environment,
 asset.criticality,
 asset.business_unit,
 user.risk.calculated_level,
 user.risk.calculated_score,
 user.risk.calculated_score_norm,
 entity.source,
 entity.type,
 entity.sub_type,
 entity.url,
 entity.attributes.Privileged,
 entity.attributes.Asset,
 entity.attributes.Managed,
 entity.attributes.Mfa_enabled,
 entity.lifecycle.First_seen,
 entity.lifecycle.Last_activity,
 entity.behaviors.Brute_force_victim,
 entity.behaviors.New_country_login,
 entity.behaviors.Used_usb_device,
 entity.risk.calculated_level,
 entity.risk.calculated_score,
 entity.risk.calculated_score_norm,
 host.entity.id,
 host.id,
 host.name,
 entity.relationships.Accesses_frequently,
 entity.relationships.Owns,
 entity.relationships.Supervises,
 entity.relationships.Supervised_by,
 @timestamp,
 entity.id,
 entity.name,
 entity.EngineMetadata.UntypedId,
 entity.hashedId,
 entity.EngineMetadata.Type
  | SORT @timestamp ASC"
`;
